<resources>
    <string name="app_name">Brewer\'s Servant</string>
    <string name="name_hint">Name</string>
    <string name="type_hint">Types and/or Subtypes</string>
    <string name="card_type_repeated">Card type already selected!</string>
    <string name="and">AND</string>
    <string name="or">OR</string>
    <string name="text_hint">Card Text</string>
    <string name="add">+</string>
    <string name="no_mana_value_selected">Mana value input is empty!</string>
    <string name="mana_value">Mana Value:</string>
    <string name="power">Power:</string>
    <string name="no_power_selected">Power input is empty!</string>
    <string name="toughness">Toughness:</string>
    <string name="no_toughness_selected">Toughness input is empty!</string>
    <string name="loyalty">Loyalty:</string>
    <string name="no_loyalty_selected">Loyalty input is empty!</string>
    <string name="rarity">Rarity:</string>
    <string name="legality">Legality:</string>
    <string name="layout">Layout:</string>
    <string name="exactly_colors">Exactly</string>
    <string name="including_colors">Including</string>
    <string name="at_most_colors">At most</string>
    <string name="card_color">Color</string>
    <string name="commander_color_identity">Commander Color Identity</string>
    <string name="produced_mana">Produced Mana</string>
    <string name="flavor_text_hint">Card Flavor Text</string>
    <string name="mana_cost_hint">Card Mana Cost</string>
    <string name="add_mana_symbol">Add Symbol</string>
    <string name="card_price">Price</string>
    <string name="usd">USD ($)</string>
    <string name="eur">EUR (€)</string>
    <string name="tix">TIX</string>
    <string name="set_hint">Set</string>
    <string name="artist_hint">Artist</string>
    <string name="amount">Amount</string>
    <string name="similar_to">Cards Similar To</string>
    <string name="not_valid_similar_to">Similar to\'s card name is not valid!</string>
    <string name="cards">Cards</string>
    <string name="combos">Combos</string>
    <string name="decks">Decks</string>
    <string name="settings">Settings</string>
    <string name="standard">Standard</string>
    <string name="pioneer">Pioneer</string>
    <string name="modern">Modern</string>
    <string name="legacy">Legacy</string>
    <string name="vintage">Vintage</string>
    <string name="brawl">Brawl</string>
    <string name="historic">Historic</string>
    <string name="pauper">Pauper</string>
    <string name="penny">Penny</string>
    <string name="commander">Commander</string>
    <string name="legal">Legal</string>
    <string name="not_legal">Not Legal</string>
    <string name="restricted">Restricted</string>
    <string name="banned">Banned</string>
    <string name="flip">Flip</string>
    <string name="related_cards">Related Cards</string>
    <string name="token">Token</string>
    <string name="meld_part">Meld Part</string>
    <string name="meld_result">Meld Result</string>
    <string name="combo_piece">Combo Piece</string>
    <string name="database_download_in_progress">Database download in progress, please do not turn off the application.</string>
    <string name="sets_downloaded">sets downloaded.</string>
    <string name="cards_downloaded">cards downloaded.</string>
    <string name="combos_downloaded">combos downloaded.</string>
    <string name="card_name_hint">Card Name</string>
    <string name="result_hint">Result</string>
    <string name="card_name_repeated">Card name already selected!</string>
    <string name="prerequisites">Prerequisites</string>
    <string name="steps">Steps</string>
    <string name="results">Results</string>
    <string name="add_deck">Add Deck</string>
    <string name="deck_name_hint">Name</string>
    <string name="deck_format_hint">Format</string>
    <string name="commander_name_hint">Commander Name</string>
    <string name="add_button">Add</string>
    <string name="no_deck_name_set">Deck name is empty!</string>
    <string name="delete_deck_alert_title">Delete</string>
    <string name="delete_deck_alert_text">This action cannot be undone.</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="add_card">Add Card</string>
    <string name="commanders_symbol"></string>
    <string name="commanders">Commanders</string>
    <string name="planeswalkers_symbol"></string>
    <string name="planeswalkers">Planeswalkers</string>
    <string name="creatures_symbol"></string>
    <string name="creatures">Creatures</string>
    <string name="artifacts_symbol"></string>
    <string name="artifacts">Artifacts</string>
    <string name="enchantments_symbol"></string>
    <string name="enchantments">Enchantments</string>
    <string name="sorceries_symbol"></string>
    <string name="sorceries">Sorceries</string>
    <string name="instants_symbol"></string>
    <string name="instants">Instants</string>
    <string name="lands_symbol"></string>
    <string name="lands">Lands</string>
    <string name="other">Other</string>
    <string name="main">Main</string>
    <string name="side">Side</string>
    <string name="maybe">Maybe</string>
    <string name="mainboard">Mainboard</string>
    <string name="sideboard">Sideboard</string>
    <string name="maybeboard">Maybeboard</string>
    <string name="face_card_hint">Face Card</string>
    <string name="save">Save</string>
    <string name="no_valid_face_card_name_set">Not a valid face card!</string>
    <string name="card_types_distribution">Card Types Distribution</string>
    <string name="mana_value_curve">Mana Value Curve</string>
    <string name="mana_value_label">Mana Value</string>
    <string name="white">White</string>
    <string name="blue">Blue</string>
    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="colorless">Colorless</string>
    <string name="symbols_vs_produced">Mana Symbol Colors vs Produced Mana</string>
    <string name="mana_symbols">Mana Symbols</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="disclaimer">This is an unofficial fan made app not endorsed nor sponsored by Wizards of the Coast or Hasbro in any way.</string>
    <string name="about_title">About the app</string>
    <string name="about">Special thank you to Scryfall for providing a great database for the cards.\n\n Thank you to Commander Spellbook for the amazing combo database as well.</string>
    <string name="no_results">No results.</string>

    <string name="w"></string>
    <string name="u"></string>
    <string name="b"></string>
    <string name="r"></string>
    <string name="g"></string>
    <string name="c"></string>

    <string name="cost_t">{T}</string>
    <string name="cost_q">{Q}</string>
    <string name="cost_e">{E}</string>
    <string name="cost_pw">{PW}</string>
    <string name="cost_chaos">{CHAOS}</string>
    <string name="cost_a">{A}</string>
    <string name="cost_x">{X}</string>
    <string name="cost_y">{Y}</string>
    <string name="cost_z">{Z}</string>
    <string name="cost_0">{0}</string>
    <string name="cost_half">{½}</string>
    <string name="cost_1">{1}</string>
    <string name="cost_2">{2}</string>
    <string name="cost_3">{3}</string>
    <string name="cost_4">{4}</string>
    <string name="cost_5">{5}</string>
    <string name="cost_6">{6}</string>
    <string name="cost_7">{7}</string>
    <string name="cost_8">{8}</string>
    <string name="cost_9">{9}</string>
    <string name="cost_10">{10}</string>
    <string name="cost_11">{11}</string>
    <string name="cost_12">{12}</string>
    <string name="cost_13">{13}</string>
    <string name="cost_14">{14}</string>
    <string name="cost_15">{15}</string>
    <string name="cost_16">{16}</string>
    <string name="cost_17">{17}</string>
    <string name="cost_18">{18}</string>
    <string name="cost_19">{19}</string>
    <string name="cost_20">{20}</string>
    <string name="cost_100">{100}</string>
    <string name="cost_1000000">{1000000}</string>
    <string name="cost_infinity">{∞}</string>
    <string name="cost_wu">{W/U}</string>
    <string name="cost_wb">{W/B}</string>
    <string name="cost_br">{B/R}</string>
    <string name="cost_bg">{B/G}</string>
    <string name="cost_ub">{U/B}</string>
    <string name="cost_ur">{U/R}</string>
    <string name="cost_rg">{R/G}</string>
    <string name="cost_rw">{R/W}</string>
    <string name="cost_gw">{G/W}</string>
    <string name="cost_gu">{G/U}</string>
    <string name="cost_wup">{W/U/P}</string>
    <string name="cost_wbp">{W/B/P}</string>
    <string name="cost_brp">{B/R/P}</string>
    <string name="cost_bgp">{B/G/P}</string>
    <string name="cost_ubp">{U/B/P}</string>
    <string name="cost_urp">{U/R/P}</string>
    <string name="cost_rgp">{R/G/P}</string>
    <string name="cost_rwp">{R/W/P}</string>
    <string name="cost_gwp">{G/W/P}</string>
    <string name="cost_gup">{G/U/P}</string>
    <string name="cost_2w">{2/W}</string>
    <string name="cost_2u">{2/U}</string>
    <string name="cost_2b">{2/B}</string>
    <string name="cost_2r">{2/R}</string>
    <string name="cost_2g">{2/G}</string>
    <string name="cost_p">{P}</string>
    <string name="cost_wp">{W/P}</string>
    <string name="cost_up">{U/P}</string>
    <string name="cost_bp">{B/P}</string>
    <string name="cost_rp">{R/P}</string>
    <string name="cost_gp">{G/P}</string>
    <string name="cost_hw">{HW}</string>
    <string name="cost_hr">{HR}</string>
    <string name="cost_w">{W}</string>
    <string name="cost_u">{U}</string>
    <string name="cost_b">{B}</string>
    <string name="cost_r">{R}</string>
    <string name="cost_g">{G}</string>
    <string name="cost_c">{C}</string>
    <string name="cost_s">{S}</string>
</resources>