<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.ComboSearchFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/combo_card_name_chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="5dp"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/combo_card_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/combo_card_name_chip_group"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/combo_card_name_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/card_name_hint"
                    android:padding="5dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_weight="5"
                    android:layout_gravity="center_vertical">
                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/combo_card_name_and_or_chip_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:singleSelection="true"
                    app:selectionRequired="true"
                    android:layout_weight="2"
                    android:layout_gravity="center">
                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AndOrChipItem"
                        android:text="@string/and"
                        android:checked="true"
                        android:padding="5dp"/>
                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AndOrChipItem"
                        android:text="@string/or"
                        android:padding="5dp"/>
                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/combo_color_divider"
                app:layout_constraintTop_toBottomOf="@id/combo_card_name_layout"
                style="@style/SearchViewDivider"/>

            <TextView
                android:id="@+id/combo_color_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/card_color"
                android:textColor="@color/colorOnBackground"
                app:layout_constraintTop_toBottomOf="@id/combo_color_divider"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/combo_color_operator_toggle_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@id/combo_color_text"
                android:gravity="center"
                app:singleSelection="true"
                app:selectionRequired="true">

                <Button
                    android:id="@+id/combo_color_exactly_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exactly_colors"
                    style="?attr/materialButtonOutlinedStyle"
                    />

                <Button
                    android:id="@+id/combo_color_including_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/including_colors"
                    style="?attr/materialButtonOutlinedStyle"
                    />

                <Button
                    android:id="@+id/combo_color_at_most_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/at_most_colors"
                    style="?attr/materialButtonOutlinedStyle"
                    />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/combo_color_toggle_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@id/combo_color_operator_toggle_group"
                android:gravity="center">
                <Button
                    android:id="@+id/combo_color_white_button"
                    android:text="@string/w"
                    style="@style/ColorButton"
                    />
                <Button
                    android:id="@+id/combo_color_blue_button"
                    android:text="@string/u"
                    style="@style/ColorButton"
                    />
                <Button
                    android:id="@+id/combo_color_black_button"
                    android:text="@string/b"
                    style="@style/ColorButton"
                    />
                <Button
                    android:id="@+id/combo_color_red_button"
                    android:text="@string/r"
                    style="@style/ColorButton"
                    />
                <Button
                    android:id="@+id/combo_color_green_button"
                    android:text="@string/g"
                    style="@style/ColorButton"
                    />
                <Button
                    android:id="@+id/combo_color_colorless_button"
                    android:text="@string/c"
                    style="@style/ColorButton"
                    />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/combo_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/result_hint"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@+id/combo_color_toggle_group"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>