<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_deck_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/deck_name_hint"
        android:padding="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_deck_format_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/deck_format_hint"
        android:padding="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:layout_constraintTop_toBottomOf="@+id/add_deck_name_text">
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_deck_commander_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/add_deck_format_text"
        android:visibility="gone">

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_deck_commander_divider"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/SearchViewDivider"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/add_deck_name_chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/add_deck_commander_divider"
            android:padding="5dp"
            android:visibility="gone"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_deck_commander_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/commander_name_hint"
            android:padding="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:layout_constraintTop_toBottomOf="@+id/add_deck_name_chip_group">
            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_deck_dialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintTop_toBottomOf="@id/add_deck_commander_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>