<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="true"
    app:cardBackgroundColor="@color/colorBackground"
    app:cardCornerRadius="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_details_split_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/rotate_fab">

        <TextView
            android:id="@+id/card_details_split_row_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/name_hint"
            android:textColor="@color/colorOnBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/card_details_split_row_mana_cost"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>

        <TextView
            android:id="@+id/card_details_split_row_mana_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/mana_cost_hint"
            android:textColor="@color/colorOnBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>

        <TextView
            android:id="@+id/card_details_split_row_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/type_hint"
            android:textColor="@color/colorOnBackground"
            app:layout_constraintTop_toBottomOf="@id/card_details_split_row_name"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/card_details_split_row_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/text_hint"
            android:textColor="@color/colorOnBackground"
            app:layout_constraintTop_toBottomOf="@id/card_details_split_row_type"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/card_details_split_row_stats_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/card_details_split_row_text"
            android:gravity="end"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/card_details_split_row_pow_tou_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/card_details_split_row_power"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp"
                    android:paddingStart="5dp"
                    android:text="0"
                    android:textColor="@color/colorOnBackground"
                    style="@style/TextAppearance.MaterialComponents.Headline6"/>

                <TextView
                    android:id="@+id/slash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/"
                    android:textColor="@color/colorOnBackground"
                    style="@style/TextAppearance.MaterialComponents.Headline6"/>

                <TextView
                    android:id="@+id/card_details_split_row_toughness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp"
                    android:paddingEnd="5dp"
                    android:text="0"
                    android:textColor="@color/colorOnBackground"
                    style="@style/TextAppearance.MaterialComponents.Headline6"/>

            </LinearLayout>

            <TextView
                android:id="@+id/card_details_split_row_loyalty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="0"
                android:textColor="@color/colorOnBackground"
                android:visibility="gone"
                style="@style/TextAppearance.MaterialComponents.Headline6"/>

        </LinearLayout>

        <TextView
            android:id="@+id/card_details_split_row_flavor_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/flavor_text_hint"
            android:textColor="@color/colorOnBackground"
            app:layout_constraintTop_toBottomOf="@id/card_details_split_row_stats_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/card_details_split_row_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/artist_hint"
            android:textColor="@color/colorOnBackground"
            app:layout_constraintTop_toBottomOf="@id/card_details_split_row_flavor_text"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/row_divider"
            app:layout_constraintTop_toBottomOf="@id/card_details_split_row_artist"
            style="@style/SearchViewDivider"
            android:padding="5dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>